--- a/digital-checksheet/src/Admin/Dashboard/Dashboard.css
+++ b/digital-checksheet/src/Admin/Dashboard/Dashboard.css
@@ -7,7 +7,7 @@
   }
   
   .dashboard-container h4 {
-    color: #230404;
+    color: #0b0423;
     font-weight: bold;
     margin-bottom: 20px;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
