--- a/digital-checksheet/src/Admin/Dashboard/OverviewCard.css
+++ b/digital-checksheet/src/Admin/Dashboard/OverviewCard.css
@@ -14,6 +14,12 @@
     font-weight: bold;
     margin-bottom: 10px;
   }
+
+  .overview-card h5 {
+    color: #c49a0e;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
   
   .overview-card .count {
     font-size: 2em;
