--- a/digital-checksheet/src/Admin/Dashboard/Dashboard.css
+++ b/digital-checksheet/src/Admin/Dashboard/Dashboard.css
@@ -2,7 +2,7 @@
 
 .dashboard-container {
     padding: 20px;
-    background-color: #8c8686;
+    background-color: #f8f8f8;
     min-height: 100vh;
   }
   
