--- a/digital-checksheet/src/Admin/Layout/AppLayout.css
+++ b/digital-checksheet/src/Admin/Layout/AppLayout.css
@@ -1,3 +1,7 @@
+.header {
+  margin-bottom: 0; /* Remove bottom margin */
+  padding-bottom: 0; /* Remove bottom padding */
+}
 .container {
     display: flex;
     flex-direction: column;
@@ -12,8 +16,9 @@
   .sidebar {
     width: 200px;
     flex-shrink: 0;
-    background-color: #f4f4f4;
+    background-color: #333;
     padding: 20px;
+    font-weight: 500;
   }
   
   .content {
@@ -39,7 +44,7 @@
   
   nav a {
     text-decoration: none;
-    color: #333;
+    color: #ffffff;
   }
   
   nav a:hover {
