--- a/digital-checksheet/src/Admin/Layout/Header.css
+++ b/digital-checksheet/src/Admin/Layout/Header.css
@@ -1,17 +1,33 @@
 /* src/Header.css */
-.header {
-    background-color: #3f51b5; 
-  }
-  
-  .title {
-    flex-grow: 1;
-    font-weight: bold;
-    font-family: "fangsong";
-    font-weight: 800;
 
-  }
-  .header {
-    margin-bottom: 0; /* Remove bottom margin */
-    padding-bottom: 0; /* Remove bottom padding */
-  }
-  
+
+.header {
+  background: linear-gradient(45deg, #3f51b5, #5a55ae); /* Gradient background */
+  margin-bottom: 0; 
+  padding-bottom: 0; 
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Add a slight shadow for depth */
+}
+
+
+.title {
+  flex-grow: 1;
+  font-weight: 800;
+  font-family: "fangsong";
+  font-size: 1.8em; 
+  color: #ffffff; 
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); /* Add a slight shadow to the text */
+}
+
+
+.logout-button {
+  background-color: #fff; 
+  color: #3f51b5; 
+  font-weight: bold; 
+  border-radius: 5px; 
+  transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition for background and color */
+}
+
+.logout-button:hover {
+  background-color: #e64a19; 
+  color: #fff; 
+}
