--- a/digital-checksheet/src/Admin/Master/Master.css
+++ b/digital-checksheet/src/Admin/Master/Master.css
@@ -2,8 +2,15 @@
 
 .Master-container {
   padding: 20px;
-  background-color: #f9f9f9;
+  background-color: #f0f2f5;
 }
+
+body {
+    font-family: 'Roboto', sans-serif;
+    background-color: #f9f9f9;
+    margin: 0;
+    padding: 0;
+  }
 
 .header {
   margin-bottom: 20px;
@@ -17,6 +24,7 @@
   margin-bottom: 20px;
 }
 
+
 .navButton {
   margin-right: 10px;
 }
@@ -25,10 +33,7 @@
   margin-bottom: 20px;
 }
 
-.tableHeader {
-  background-color: #1976d2;
-  color: white;
-}
+
 
 .dialogContent {
   margin-top: 20px;
@@ -91,4 +96,58 @@
     margin-right: 0;
     margin-bottom: 10px;
   }
+}
+
+
+/* Table styles */
+table {
+  width: 100%;
+  border-collapse: collapse;
+  background-color: #ffffff;
+}
+
+.tableHeader {
+  background-color: #989090;
+    color: white;
+    font-size: 1.2rem;
+    font-weight: bold;
+    height: 50px;
+    text-align: left;
+    padding: 12px 15px;
+    border-bottom: 1px solid #ddd;
+}
+
+table thead {
+  background-color: rgb(148, 146, 146);
+  
+}
+
+table thead th {
+  color: white;
+  padding: 12px 15px;
+  text-align: left;
+  font-weight: bold;
+  padding: 16px;
+  border-bottom: 1px solid #ddd;
+}
+
+table thead th:first-child {
+  border-top-left-radius: 8px;
+}
+
+table thead th:last-child {
+  border-top-right-radius: 8px;
+}
+
+table tbody tr:nth-of-type(even) {
+  background-color: #f2f2f2;
+}
+
+table tbody tr:hover {
+  background-color: #e0e0e0;
+}
+
+table tbody td {
+  padding: 12px 15px;
+  border-bottom: 1px solid #ddd;
 }
