--- a/digital-checksheet/src/Admin/Dashboard/ChartCard.css
+++ b/digital-checksheet/src/Admin/Dashboard/ChartCard.css
@@ -1,11 +1,13 @@
 /* ChartCard.css */
 
 .chart-card {
-    padding: 20px;
+    padding: 16px;
     background-color: #ffffff;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     margin-bottom: 20px;
+    text-align: center;
+    width: 100%;
   }
   
   .chart-card h6 {
@@ -17,5 +19,10 @@
   .chart-container {
     position: relative;
     height: 400px;
+  }
+
+  .chart-card canvas {
+    max-height: 200px; /* Adjust the height as needed */
+    max-width: 100%;
   }
   
