--- a/digital-checksheet/src/SuperAdmin/pages/Organization.css
+++ b/digital-checksheet/src/SuperAdmin/pages/Organization.css
@@ -124,7 +124,7 @@ body {
   }
   
   .organization-table th {
-    background-color: #f2f2f2;
+    background-color: #333;
     font-weight: 700;
   }
   
