--- a/digital-checksheet/src/Layout/Header.css
+++ b/digital-checksheet/src/Layout/Header.css
@@ -1,19 +1,72 @@
 /* src/Header.css */
 
 .header {
-  background: linear-gradient(45deg, #3f51b5, #5a55ae); /* Gradient background */
-  margin-bottom: 0; 
-  padding-bottom: 0; 
+  margin:0;
+   padding: 0;
+  background: linear-gradient(45deg, #01285c, #01012a); /* Gradient background */
+  margin-bottom: 0;
+  padding-bottom: 0;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Add a slight shadow for depth */
+  height: 80px;
+}
+
+.toolbar {
+  display: flex;
+  justify-content: space-between; /* Distribute space between items */
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding-left: 0;
+}
+
+.logo {
+  height: 80px; 
+  /* margin-right: auto;  */
+  margin-left: 0;
+  float: left;
+  display: inline-block;
+}
+
+
+@media (min-width: 600px) {
+  .css-hyum1k-MuiToolbar-root {
+      /* padding-left: 24px; */
+      /* padding-right: 24px; */
+  }
+}
+
+.css-hyum1k-MuiToolbar-root {
+  position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-items: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  /* padding-left: 16px; */
+  padding-right: 16px;
+  min-height: 56px;
 }
 
 .title {
   flex-grow: 1;
-  font-weight: 800;
+  font-weight: 600;
   font-family: "fangsong";
-  font-size: 1.8em; 
-  color: #ffffff; 
+  font-size: 2.5em;
+  color: #ffffff;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); /* Add a slight shadow to the text */
+  text-align: center; /* Center the title */
+}
+
+.css-2ulfj5-MuiTypography-root {
+  /* margin: 0; */
+  /* font-family: "Roboto", "Helvetica", "Arial", sans-serif; */
+  /* font-weight: 500; */
+  /* font-size: 1.25rem; */
+  /* line-height: 1.6; */
+  /* letter-spacing: 0.0075em; */
 }
 
 .logout-button {
