--- a/digital-checksheet/src/Admin/Dashboard/OverviewCard.css
+++ b/digital-checksheet/src/Admin/Dashboard/OverviewCard.css
@@ -1,12 +1,13 @@
 /* OverviewCard.css */
 
 .overview-card {
-    padding: 20px;
+    
     background-color: #ffffff;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     text-align: center;
     margin-bottom: 20px;
+    
   }
   
   .overview-card h6 {
@@ -19,7 +20,9 @@
   .overview-card h5 {
     color: #c49a0e;
     font-weight: bold;
+    font-size: 25px;
     margin-bottom: 10px;
+    
   }
   
   .overview-card .count {
