--- a/digital-checksheet/src/SuperAdmin/pages/Organization.css
+++ b/digital-checksheet/src/SuperAdmin/pages/Organization.css
@@ -124,7 +124,7 @@ body {
   }
   
   .organization-table th {
-    background-color: #f2f2f2;
+    
     font-weight: 700;
   }
   
@@ -222,3 +222,16 @@ body {
       text-align: center;
     }
   }
+
+  .overview-card {
+    /* width: calc(33.33% - 20px); */
+    /* padding: 10px; */
+    
+    
+    background-color: #ffffff;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    text-align: center;
+    margin-bottom: 20px;
+    box-sizing: border-box;
+}
