--- a/digital-checksheet/src/user/Login/Login.css
+++ b/digital-checksheet/src/user/Login/Login.css
@@ -22,6 +22,15 @@
   margin-top: 30px;
 }
 
+.dcs-logo {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  border-radius: 50%;
+  margin-bottom: 10px;
+}
+
+
 .textt {
   color: #3c009d;
   font-size: 36px;
